Made create task endpoint

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },  
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=to-do-db;User=root;Password=JggbykP1a94K;"
+    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=tododb;User=root;Password=JggbykP1a94K;"
   }
 }
